crates/frontend/samples/test7.out
error: failed to prove 0x12b80dec8: UniversalVar(1) implements TraitSpec { def: "Meow"#18, params: 0x12b80e7a8: [] }
   ┌─ crates/frontend/samples/test7.fir:23:32
   │
23 │     type Bar: NeedsMeowGeneric<Foo>;
   │                                ^^^

error: failed to prove 0x12b80def8: UniversalVar(0) implements TraitSpec { def: "Meow"#18, params: 0x12b80e7a8: [] }
   ┌─ crates/frontend/samples/test7.fir:27:45
   │
27 │ pub struct Demo4<Foo, Bar: NeedsMeowGeneric<Foo>>(Foo, Bar);
   │                                             ^^^

error: failed to prove 0x12b80e0a8: Tuple(0x12b80e0d8: []) implements TraitSpec { def: "Meow"#18, params: 0x12b80e7a8: [] }
   ┌─ crates/frontend/samples/test7.fir:32:14
   │
32 │     type T = ();
   │
